--- a/solshine/src/main/res/values/strings.xml
+++ b/solshine/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Solshine</string>
     <string name="refresh">Refresh</string>
+    <string name="settings">Settings</string>
+    <string name="location">Location</string>
 </resources>
