--- a/solshine/src/main/res/values/strings.xml
+++ b/solshine/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="refresh">Refresh</string>
     <string name="settings">Settings</string>
     <string name="location">Location</string>
+    <string name="units">Units</string>
 </resources>
