--- a/solshine/src/main/res/values/strings.xml
+++ b/solshine/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="settings">Settings</string>
     <string name="location">Location</string>
     <string name="units">Units</string>
+    <string name="view_map">View map</string>
 </resources>
