implemented sharing via intent
not sure why i had to set the intent twice with different intents and
only the first seems to be shared. i don't get this api.

- Solshine: added shared DateFormat
- IndexPresenter: sending more stuff to DetailActivity

--- a/solshine/src/main/res/values/strings.xml
+++ b/solshine/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="settings">Settings</string>
     <string name="location">Location</string>
     <string name="units">Units</string>
+    <string name="share">Share</string>
     <string name="view_map">View map</string>
 </resources>
